--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "mysql2": "^3.14.2",
     "next": "15.4.4",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "react-icons": "^5.5.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
